--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aitoolkit"
+name = "pynltk"
 version = "0.1.0"
 description = "artificial intelligence project toolkit"
 authors = ["Htring <1129501586@qq.com>"]
@@ -12,6 +12,7 @@ loguru = "^0.6.0"
 selenium = "^4.7.2"
 torch = "1.12"
 jieba = "^0.42.1"
+numpy = "^1.24.2"
 
 [build-system]
 requires = ["poetry-core"]
